--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -42,6 +42,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CaveGenerator.cs" />
+    <Compile Include="DrunkardWalk.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Models\Grid.cs" />
