--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -42,9 +42,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Content Generation\Goal Placement\GoalPlacer.cs" />
-    <Compile Include="Content Generation\Map Generation\CellularAutomata.cs" />
+    <Compile Include="Content Generation\Map Cleanup\CellularAutomata.cs" />
     <Compile Include="Content Generation\Map Generation\DrunkenCells.cs" />
     <Compile Include="Content Generation\Map Generation\MapGenerator.cs" />
+    <Compile Include="Content Generation\Map Generation\RandomPlacement.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\Character.cs" />
