--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Content Generation\Map Generation\MapGenerator.cs" />
     <Compile Include="Content Generation\Map Generation\RandomPlacement.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Models\Camera.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\Character.cs" />
     <Compile Include="Models\Goal.cs" />
