--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Content Generation\Goal Placement\GoalPlacer.cs" />
     <Compile Include="Content Generation\Map Cleanup\CellularAutomata.cs" />
-    <Compile Include="Content Generation\Map Generation\DrunkenCells.cs" />
+    <Compile Include="Content Generation\Map Generation\DrunkardWalk.cs" />
     <Compile Include="Content Generation\Map Generation\MapGenerator.cs" />
     <Compile Include="Content Generation\Map Generation\RandomPlacement.cs" />
     <Compile Include="Game1.cs" />
