--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -41,13 +41,17 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Content Generation\AI\AStarAgent.cs" />
-    <Compile Include="Content Generation\AI\PriorityQueueB.cs" />
+    <Compile Include="Content Generation\Astar\AuthorAttribute.cs" />
     <Compile Include="Content Generation\Goal Placement\GoalPlacer.cs" />
+    <Compile Include="Content Generation\Astar\HighResolutionTime.cs" />
+    <Compile Include="Content Generation\Astar\IPathFinder.cs" />
     <Compile Include="Content Generation\Map Cleanup\CellularAutomata.cs" />
     <Compile Include="Content Generation\Map Generation\DrunkardWalk.cs" />
     <Compile Include="Content Generation\Map Generation\MapGenerator.cs" />
     <Compile Include="Content Generation\Map Generation\RandomPlacement.cs" />
+    <Compile Include="Content Generation\Astar\PathFinder.cs" />
+    <Compile Include="Content Generation\Astar\PathFinderFast.cs" />
+    <Compile Include="Content Generation\Astar\PriorityQueueB.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Models\Camera.cs" />
     <Compile Include="Models\Cell.cs" />
