added parameter settings class and some predefined settings

--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Content Generation\Map Generation\DrunkardWalk.cs" />
     <Compile Include="Content Generation\Map Generation\MapGenerator.cs" />
     <Compile Include="Content Generation\Map Generation\RandomPlacement.cs" />
+    <Compile Include="Content Generation\Parameter Settings\Settings.cs" />
+    <Compile Include="Content Generation\Parameter Settings\PredefinedSettings.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="Models\Camera.cs" />
