--- a/CaveGeneration/CaveGeneration.csproj
+++ b/CaveGeneration/CaveGeneration.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\Characters\Enemy.cs" />
     <Compile Include="Models\Characters\Player.cs" />
     <Compile Include="Models\Characters\StaticEnemy.cs" />
+    <Compile Include="Models\FrameCounter.cs" />
     <Compile Include="Models\Goal.cs" />
     <Compile Include="Models\Grid.cs" />
     <Compile Include="Models\HealthCounter.cs" />
